[tool.poetry]
name = "tcga-cnn"
version = "0.1.0"
description = "A pipeline for predicting gene expression from H&E-stained histology slides."
authors = ["Nolan Tremelling <nnt2109@columbia.edu>"]
readme = "README.md"
packages = [{include = "tcga_cnn"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tensorflow = "^2.14.0"
pillow = "^10.1.0"
scipy = "^1.11.3"
matplotlib = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
